第四次实验验证成功

--- a/4-uart/Makefile
+++ b/4-uart/Makefile
@@ -1,32 +1,22 @@
-# 工具链路径设置
-TOOLCHAIN_PATH = /usr/local/arm/gcc-arm-10.3-2021.07-x86_64-arm-none-linux-gnueabihf/bin
-CC = $(TOOLCHAIN_PATH)/arm-none-linux-gnueabihf-gcc
-LD = $(TOOLCHAIN_PATH)/arm-none-linux-gnueabihf-ld
-OBJCOPY = $(TOOLCHAIN_PATH)/arm-none-linux-gnueabihf-objcopy
-OBJDUMP = $(TOOLCHAIN_PATH)/arm-none-linux-gnueabihf-objdump
+# Toolchain definitions
+CC := /usr/local/arm/gcc-arm-10.3-2021.07-x86_64-arm-none-linux-gnueabihf/bin/arm-none-linux-gnueabihf-gcc
+LD := /usr/local/arm/gcc-arm-10.3-2021.07-x86_64-arm-none-linux-gnueabihf/bin/arm-none-linux-gnueabihf-ld
+OBJCOPY := /usr/local/arm/gcc-arm-10.3-2021.07-x86_64-arm-none-linux-gnueabihf/bin/arm-none-linux-gnueabihf-objcopy
+OBJDUMP := /usr/local/arm/gcc-arm-10.3-2021.07-x86_64-arm-none-linux-gnueabihf/bin/arm-none-linux-gnueabihf-objdump
 
-# 目标文件
-TARGET = uart
-OBJS = start.o uart.o
+# Build target
+uart.bin: start.o clock.o uart.o main.o
+	$(LD) -Ttext 0xD0020010 -o uart.elf $^
+	$(OBJCOPY) -O binary uart.elf $@
+	$(OBJDUMP) -D uart.elf > uart.dis
 
-# 编译选项
-CFLAGS = -nostdlib -I. -O2 -Wall
-LDFLAGS = -Ttext 0xD0020010
-
-all: $(TARGET).bin
-
-$(TARGET).bin: $(TARGET).elf
-	$(OBJCOPY) -O binary $< $@
-	$(OBJDUMP) -D $< > $(TARGET).dis
-
-$(TARGET).elf: $(OBJS)
-	$(LD) $(LDFLAGS) -o $@ $^
-
+# Compilation rules
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) -c $< -o $@ -nostdlib
 
 %.o: %.S
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) -c $< -o $@ -nostdlib
 
+# Clean rule
 clean:
 	rm -f *.o *.elf *.bin *.dis
