--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "makefile.extensionOutputFolder": "./.vscode"
+    "makefile.extensionOutputFolder": "./.vscode",
+    "clangd.arguments": [
+        "--all-scopes-completion",
+        "--completion-style=detailed",
+        "--query-driver=~/tools/toolchains/arm-2009q3/arm-none-linux-gnueabi/bin"
+    ]
 }
